--- a/.travis.yml
+++ b/.travis.yml
@@ -43,5 +43,5 @@ deploy:
     skip_cleanup: true
     on:
       branch: master
-    email: 30682912+GenisysPro-deploy@users.noreply.github.com
-    name: GenisysPro-deploy
+    email: 30682912+TheVoidPE-deploy@users.noreply.github.com
+    name: TheVoidPE-deploy
